Fix crash when searching with no present data file

BUG: 300521